--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tik Tak Toe</title>
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
   <div id="app">
@@ -37,5 +38,7 @@
       <button id="reset">Reset Game</button>
     </div>
   </div>
+
+  <script src="game.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
