--- a/index.html
+++ b/index.html
@@ -4,7 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+  <style>
+    /* General Styles */
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 20px;
+    }
+
+    #app {
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    /* Color Selector Section */
+    .color-selectors {
+      margin: 15px 0;
+    }
+
+    .color-selectors label {
+      font-size: 1rem;
+      margin-right: 5px;
+    }
+
+    .color-selectors input {
+      margin-right: 20px;
+    }
+
+    /* Game Board Styles */
+    .game-board {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 5px;
+      margin: 20px 0;
+      background-color: #f4f4f4; /* Background color for the board */
+      padding: 10px;
+    }
+
+    .cell {
+      width: 100px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2rem;
+      background-color: lightgrey; /* Cell background color */
+      border: 2px solid #000000;
+      cursor: pointer;
+    }
+
+    .cell.taken {
+      cursor: not-allowed;
+      background-color: #ddd; /* Background color when cell is taken */
+    }
+
+    /* Status and Reset Button */
+    #status {
+      font-size: 1.2rem;
+      margin: 10px 0;
+    }
+
+    #reset {
+      padding: 10px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <div id="app">
@@ -39,6 +111,5 @@
     </div>
   </div>
 
-  <script src="game.js"></script> <!-- Link to your JavaScript file -->
-</body>
-</html>
+  <script>
+    // Game
